<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account"
            android:textColor="@color/app_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:title="@string/MyAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <item
            android:id="@+id/settings"
            android:textColor="@color/app_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:title="@string/Settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <item
            android:id="@+id/logout"
            android:textColor="@color/app_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:title="@string/LogOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </group>
</menu>
